todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum


##################################################################
opsi-winst/opsi-script (4.12.4.16) stable; urgency=low

 * can now handle *.opsiscript files with bom
 * call of execwith section with /encoding parameter (by j.laajili)

-- d.oertel <d.oertel@uib.de> Fri, 26 Feb 2021 15:00

opsi-winst/opsi-script (4.12.4.15) stable; urgency=low

 * new function asConfidentialList(<list>) : stringlist
 * new GUI Interface implementation
 * some additional try excet in osjson and load testfile variants
 * osGUIControl: unify skin directories to 'skin' with fallback to custom\winstskin at windows
 * standard out file at windows now opsi-script.exe
 * locale is now opsi-script.po (also at windows)
 * winstxx.exe only as symbolic links to opsi-script.exe (for backward compatibility)
 * osparser: executesection: shellinanIcon: logleveloffset=0

-- d.oertel <d.oertel@uib.de> Fri, 12 Feb 2021 15:00

opsi-winst/opsi-script (4.12.4.14) stable; urgency=low

 * redesign of TXStringlist file in and out encoding  (by j.laajili)
 * call of patches section with /encoding parameter (by j.laajili)
 * call of patchTextFile section with /encoding parameter  (by j.laajili)
 * new boolean function: fileorfolderExists(<file name>, [<access arch>]) (by j.laajili)
 * osregistry: open Registry with KEY:READ instead of KEY_ALL_ACCESS. Thanks to Jens Boettge. ; fixes  #4625

-- d.oertel <d.oertel@uib.de> Fri, 29 Jan 2021 15:00


opsi-winst/opsi-script (4.12.4.13) stable; urgency=low

 * osfunc: new: TUibIniFile.ReadRawSection (by j.laajili)
 * new function getSectionFromIniFile based on ReadRawSection (by j.laajili)
 * osxmlsections: fix for xml2 delnode

-- d.oertel <d.oertel@uib.de> Mon, 25 Jan 2021 15:00

opsi-winst/opsi-script (4.12.4.12) stable; urgency=low

 * repair center batchgui on screen